.github/workflows/ci-downstream-mingw.yml: Test passagemath-polyhedra

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -42,6 +42,7 @@ jobs:
                             "sagemath-objects",
                             "sagemath-planarity",
                             "sagemath-plot",
+                            "sagemath-polyhedra",
                             "sagemath-rankwidth",
                             "sagemath-tdlib"
                            ]') }}
