--- a/tox.ini
+++ b/tox.ini
@@ -296,7 +296,7 @@ setenv =
     linuxmint-22.1: BASE_IMAGE=linuxmintd/mint22.1
     #
     # https://hub.docker.com/_/fedora
-    # as of 2025-05, latest=42, rawhide=43
+    # as of 2026-01, latest=43, rawhide=44
     fedora:         SYSTEM=fedora
     fedora:         BASE_IMAGE=fedora
     fedora:                                    IGNORE_MISSING_SYSTEM_PACKAGES=yes
@@ -318,6 +318,7 @@ setenv =
     fedora-41:        BASE_TAG=41
     fedora-42:        BASE_TAG=42
     fedora-43:        BASE_TAG=43
+    fedora-44:        BASE_TAG=44
     #
     # https://hub.docker.com/r/scientificlinux/sl
     #
@@ -639,7 +640,7 @@ setenv =
     #  - toolchain
     #
     # allow GCC spkg on these systems which already bring GCC 15
-    fedora-{42,43},archlinux: CONFIG_CONFIGURE_ARGS_2=--with-system-gcc
+    fedora-{42,43,44},archlinux: CONFIG_CONFIGURE_ARGS_2=--with-system-gcc
     gcc_spkg:                 CONFIG_CONFIGURE_ARGS_2=--without-system-gcc
     gcc_8:                    CONFIG_CONFIGURE_ARGS_2=--with-system-gcc=force CC=gcc-8 CXX=g++-8 FC=gfortran-8
     gcc_8:                      EXTRA_SAGE_PACKAGES_2=_gcc8
@@ -918,7 +919,7 @@ setenv =
                      ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing,resolute} \
                      debian-{bullseye,bookworm,trixie,forky,sid} \
                      linuxmint-{20.2,20.3,21,21.1,21.2,21.3,22} \
-                     fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43} \
+                     fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43,44} \
                      centos-stream-{9,9-python3.12,10} \
                      almalinux-{8-toolset-gcc_9-python3.12,9-python3.11} \
                      alpine \
@@ -930,7 +931,7 @@ setenv =
                      conda-forge-python3.11 \
                      ubuntu-bionic-toolchain-gcc_9-i386 \
                      debian-bullseye-i386 \
-                     fedora-{40,41,42,43}-arm64v8
+                     fedora-{40,41,42,43,44}-arm64v8
     #
     # Container badges for the developer guide
     #
