.github/workflows/mingw.yml: Use --without-system-zlib

--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -216,7 +216,7 @@ jobs:
               mkdir -p logs/pkgs
               touch logs/pkgs/config.log
               ln -s logs/pkgs/config.log config.log
-              ./configure --enable-build-as-root --prefix=$PREFIX --with-sage-venv --with-system-python3=force --disable-python-distutils-check ${{ inputs.extra_configure_args }}
+              ./configure --enable-build-as-root --prefix=$PREFIX --with-sage-venv --with-system-python3=force --disable-python-distutils-check --without-system-zlib ${{ inputs.extra_configure_args }}
           fi
           export TARGETS_PRE="${{ inputs.targets_pre }}" TARGETS="${{ inputs.targets }}" TARGETS_OPTIONAL="${{ inputs.targets_optional }}"
           export VIRTUALENV_SYSTEM_SITE_PACKAGES=1
