.github/workflows/ci-mingw.yml: Add passagemath-iml

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -31,6 +31,7 @@ jobs:
         sagemath_glpk
         sagemath_graphs
         sagemath_homfly
+        sagemath_iml
         sagemath_libbraiding
         sagemath_m4ri_m4rie
         sagemath_modules
@@ -54,6 +55,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_iml-check
         sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
@@ -109,6 +111,7 @@ jobs:
         sagemath_glpk
         sagemath_graphs
         sagemath_homfly
+        sagemath_iml
         sagemath_libbraiding
         sagemath_m4ri_m4rie
         sagemath_modules
@@ -132,6 +135,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_iml-check
         sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
@@ -212,6 +216,7 @@ jobs:
         sagemath_glpk
         sagemath_graphs
         sagemath_homfly
+        sagemath_iml
         sagemath_libbraiding
         sagemath_m4ri_m4rie
         sagemath_modules
@@ -235,6 +240,7 @@ jobs:
         sagemath_glpk-check
         sagemath_graphs-check
         sagemath_homfly-check
+        sagemath_iml-check
         sagemath_m4ri_m4rie-check
         sagemath_modules-check
         sagemath_nauty-check
