--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -1033,6 +1033,12 @@ jobs:
         run: |
           ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_flint
 
+      - name: sagemath-iml
+        id:   sagemath-iml
+        if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_iml
+
       - name: sagemath-pari
         id:   sagemath-pari
         if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
