--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -102,7 +102,7 @@ jobs:
           ["standard"]
       docker_targets: "with-targets-optional"
       logs_artifact_suffix: "-optional"
-      extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq perl_mongodb graphviz
+      extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq graphviz
       # We remove packages starting with _, in particular package _develop
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :optional: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc | grep -v ^_))'
       max_parallel: 8
@@ -120,6 +120,6 @@ jobs:
           ["standard"]
       docker_targets: "with-targets-optional"
       logs_artifact_suffix: "-experimental"
-      extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq perl_mongodb graphviz
+      extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq graphviz
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :experimental: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc))'
       max_parallel: 8
