tox.ini (archlinux): Set DOCKER_DEFAULT_PLATFORM=linux/amd64

--- a/tox.ini
+++ b/tox.ini
@@ -374,6 +374,7 @@ setenv =
     archlinux:      SYSTEM=arch
     archlinux:      BASE_IMAGE=archlinux
     archlinux:                                 IGNORE_MISSING_SYSTEM_PACKAGES=yes
+    archlinux:        DOCKER_DEFAULT_PLATFORM=linux/amd64
     #
     # https://hub.docker.com/r/vbatts/slackware
     #
