--- a/tox.ini
+++ b/tox.ini
@@ -930,6 +930,7 @@ setenv =
                      opensuse-tumbleweed{-python3.10,} \
                      voidlinux{-musl,} \
                      conda-forge-python3.11 \
+                     nixos-python3.13 \
                      ubuntu-bionic-toolchain-gcc_9-i386 \
                      debian-bullseye-i386 \
                      fedora-{40,41,42,43,44}-arm64v8
