--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -551,6 +551,12 @@ jobs:
         run: |
           ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_categories
 
+      - name: sagemath-polymake
+        id:   sagemath-polymake
+        if:   (success() || failure()) && steps.sagemath-categories.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_polymake
+
       - name: sagemath-glpk
         id:   sagemath-glpk
         if:   (success() || failure()) && steps.sagemath-categories.outcome == 'success'
