--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -148,7 +148,7 @@ jobs:
       - name: Merge CI fixes from sagemath/sage
         if: inputs.merge_ci_fixes
         run: |
-          .ci/merge-fixes.sh
+          .github/workflows/merge-fixes.sh
         shell: msys2 {0}
         env:
           GH_TOKEN: ${{ github.token }}
