pkgs/sagemath-modules: Restore inclusion of sage/schemes/projective/coh*.py

--- a/pkgs/sagemath-categories/MANIFEST.in
+++ b/pkgs/sagemath-categories/MANIFEST.in
@@ -248,6 +248,8 @@ graft sage/schemes/projective
 graft sage/schemes/product_projective
 graft sage/schemes/weighted_projective
 
+exclude sage/schemes/*/coh*.p*                                  # sagemath-modules
+
 graft sage/sets
 exclude sage/sets/pythonclass.*                                 # sagemath-objects
 
