tox.ini, .devcontainer: Remove linuxmint-20.*, add linuxmint-22.{1,2,3}

--- a/tox.ini
+++ b/tox.ini
@@ -294,6 +294,8 @@ setenv =
     linuxmint-21.3: BASE_IMAGE=linuxmintd/mint21.3
     linuxmint-22:   BASE_IMAGE=linuxmintd/mint22
     linuxmint-22.1: BASE_IMAGE=linuxmintd/mint22.1
+    linuxmint-22.2: BASE_IMAGE=linuxmintd/mint22.2
+    linuxmint-22.3: BASE_IMAGE=linuxmintd/mint22.3
     #
     # https://hub.docker.com/_/fedora
     # as of 2026-01, latest=43, rawhide=44
@@ -918,7 +920,7 @@ setenv =
     DEFAULT_SYSTEM_FACTORS=\
                      ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing,resolute} \
                      debian-{bullseye,bookworm,trixie,forky,sid} \
-                     linuxmint-{20.2,20.3,21,21.1,21.2,21.3,22} \
+                     linuxmint-{21,21.1,21.2,21.3,22,22.1,22.2,22.3} \
                      fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43,44} \
                      centos-stream-{9,9-python3.12,10} \
                      almalinux-{8-toolset-gcc_9-python3.12,9-python3.11} \
