--- a/tox.ini
+++ b/tox.ini
@@ -922,13 +922,13 @@ setenv =
                      debian-{bullseye,bookworm,trixie,forky,sid} \
                      linuxmint-{21,21.1,21.2,21.3,22,22.1,22.2,22.3} \
                      fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43,44} \
-                     centos-stream-{9,9-python3.12,10} \
+                     centos-stream-{9-python3.12,10} \
                      almalinux-{8-toolset-gcc_9-python3.12,9-python3.11} \
                      alpine \
                      gentoo-python3.13 \
                      archlinux-latest \
                      opensuse-{15.6-gcc_11-python3.11,16.0-python3.13} \
-                     opensuse-tumbleweed{-python3.10,} \
+                     opensuse-tumbleweed \
                      voidlinux{-musl,} \
                      conda-forge-python3.11 \
                      nixos-python3.13 \
