src/sage/config.py.in: Add comment

--- a/src/sage/config.py.in
+++ b/src/sage/config.py.in
@@ -1,3 +1,6 @@
+# This template for a sage.config module is used by the meson build system.
+# It is not used in passagemath, which ships this module from pkgs/sage-conf*/
+
 from pathlib import Path
 
 import sage
