pyproject.toml: Pin memory_allocator to < 0.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
   'cython >=3.1.0,<3.3.0',
   'gmpy2 ~=2.1.b999',
   'jinja2',
-  'memory_allocator',
+  'memory_allocator <0.2',
   'numpy >=2.2.4',
 ]
 [tool.meson-python.args]
@@ -60,7 +60,7 @@ dependencies = [
   'ipywidgets >=7.5.1',
   'jupyter-client',
   'matplotlib >=3.7.0',
-  'memory_allocator',
+  'memory_allocator <0.2',
   'mpmath >=1.1.0, <1.4',
   'networkx >=3.1',
   'numpy >=1.25',
