--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -390,8 +390,13 @@ jobs:
       # to avoid "DelocationError: Library dependencies do not satisfy target MacOS version 10.9"
       MACOSX_DEPLOYMENT_TARGET: 13.0
     steps:
+      - name: Check build disk space
+        run: |
+          df -h /
+          if df -h /mnt | grep /mnt 2>/dev/null; then
+              echo HAVE_MNT=1 >> $GITHUB_ENV
+          fi
       - name: Maximize build disk space
-        if: runner.os == 'Linux' && matrix.arch != 'aarch64'
         uses: easimon/maximize-build-space@v10
         with:
           # need space in /var for Docker images
@@ -401,6 +406,8 @@ jobs:
           remove-haskell:       true
           remove-codeql:        true
           remove-docker-images: true
+        continue-on-error: true
+        if: runner.os == 'Linux' && matrix.arch != 'aarch64' && env.HAVE_MNT
 
       - uses: actions/checkout@v4
 
@@ -843,8 +850,13 @@ jobs:
       # to avoid "DelocationError: Library dependencies do not satisfy target MacOS version 10.9"
       MACOSX_DEPLOYMENT_TARGET: 13.0
     steps:
+      - name: Check build disk space
+        run: |
+          df -h /
+          if df -h /mnt | grep /mnt 2>/dev/null ; then
+              echo HAVE_MNT=1 >> $GITHUB_ENV
+          fi
       - name: Maximize build disk space
-        if: runner.os == 'Linux' && matrix.arch != 'aarch64'
         uses: easimon/maximize-build-space@v10
         with:
           # need space in /var for Docker images
@@ -854,6 +866,8 @@ jobs:
           remove-haskell:       true
           remove-codeql:        true
           remove-docker-images: true
+        continue-on-error: true
+        if: runner.os == 'Linux' && matrix.arch != 'aarch64' && env.HAVE_MNT
 
       - uses: actions/checkout@v4
 
@@ -1163,8 +1177,13 @@ jobs:
       # to avoid "DelocationError: Library dependencies do not satisfy target MacOS version 10.9"
       MACOSX_DEPLOYMENT_TARGET: 13.0
     steps:
+      - name: Check build disk space
+        run: |
+          df -h /
+          if df -h /mnt | grep /mnt 2>/dev/null ; then
+              echo HAVE_MNT=1 >> $GITHUB_ENV
+          fi
       - name: Maximize build disk space
-        if: runner.os == 'Linux' && matrix.arch != 'aarch64'
         uses: easimon/maximize-build-space@v10
         with:
           # need space in /var for Docker images
@@ -1174,6 +1193,8 @@ jobs:
           remove-haskell:       true
           remove-codeql:        true
           remove-docker-images: true
+        continue-on-error: true
+        if: runner.os == 'Linux' && matrix.arch != 'aarch64' && env.HAVE_MNT
 
       - uses: actions/checkout@v4
 
