--- a/.github/workflows/dist-wheels-windows.yml
+++ b/.github/workflows/dist-wheels-windows.yml
@@ -229,6 +229,7 @@ jobs:
         with:
           install: >-
             mingw-w64-${{ matrix.env }}-gcc
+            mingw-w64-${{ matrix.env }}-omp
             autotools
             python
             python-pip
