--- a/pkgs/sagemath-categories/MANIFEST.in
+++ b/pkgs/sagemath-categories/MANIFEST.in
@@ -47,6 +47,7 @@ include sage/interfaces/expect.p*
 include sage/interfaces/interface.p*
 include sage/interfaces/sage0.p*
 
+include sage/interfaces/khoca.p*
 include sage/interfaces/regina.p*
 
 graft sage/parallel
