pkgs/sagemath-gsl/tox.ini: Update

--- a/pkgs/sagemath-gsl/tox.ini
+++ b/pkgs/sagemath-gsl/tox.ini
@@ -1,10 +1,10 @@
 # To build and test in the tox environment:
 #
-# make SAGE_WHEELS=yes sagemath_modules-build-deps && ./sage -sh -c '(cd pkgs/sagemath-modules && SAGE_NUM_THREADS=8 tox -v -v -v -e sagepython-sagewheels-nopypi-norequirements)'
+# make SAGE_WHEELS=yes sagemath_gsl-build-deps && ./sage -sh -c '(cd pkgs/sagemath-gsl && SAGE_NUM_THREADS=8 tox -v -v -v -e sagepython-sagewheels-nopypi-norequirements)'
 #
 # After this, to test interactively:
 #
-# pkgs/sagemath-modules/.tox/sagepython-sagewheels-nopypi-norequirements/bin/sage
+# pkgs/sagemath-gsl/.tox/sagepython-sagewheels-nopypi-norequirements/bin/sage
 #
 [tox]
 envlist =
@@ -66,10 +66,10 @@ allowlist_externals =
 
 commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
-    python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.cpython.builtin_types, sage.cpython.cython_metaclass, sage.cpython.debug, sage.structure.all, sage.categories.all, sage.all__sagemath_modules'
+    python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_gsl'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_modules --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gsl --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:sage/calculus}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
