--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -1034,6 +1034,12 @@ jobs:
           path: sage-local-artifact/sage-local.tar
           name: sage-local-${{ matrix.os }}-${{ matrix.build }}-${{ matrix.arch }}-b-wheels
 
+      - name: sagemath-gsl
+        id:   sagemath-gsl
+        if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_gsl
+
       - name: sagemath-plot
         id:   sagemath-plot
         if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
